# linker-sim

./: .gitattributes  .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  REAMDE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  data.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
_internal/: target_spec.md
assets/urdf/: camera_base_link.STL  workstation.urdf
assets/urdf/AR5-5_07L-W4C4A2_description/: AR5-5_07L-W4C4A2.urdf
assets/urdf/AR5_L6_description/: AR5_L6_left.urdf  AR5_L6_left_workstation.urdf  AR5_L6_right.urdf
assets/urdf/L6-V3_1L/: linkerhand_L6V3.1_left.urdf
assets/workstations/a7_lite_dc/: manifest.yaml  recipe.yaml  workstation.mjcf  workstation.urdf
assets/workstations/a7_lite_l25_dc/: manifest.yaml  recipe.yaml  workstation.mjcf  workstation.urdf
assets/workstations/a7_lite_o6_dc/: manifest.yaml  recipe.yaml  workstation.mjcf  workstation.urdf
assets/workstations/ar5_08_l25_bench_bimanual/: manifest.yaml  recipe.yaml  workstation.mjcf  workstation.urdf
assets/workstations/ar5_08_o6_bench_bimanual/: manifest.yaml  recipe.yaml  workstation.mjcf  workstation.urdf
assets/workstations/ar5_l25_bench_bimanual/: manifest.yaml  workstation.mjcf  workstation.urdf
assets/workstations/ar5_l6_bench/: manifest.yaml  recipe.yaml  workstation.mjcf  workstation.urdf
assets/workstations/ar5_l6_bench_bimanual/: manifest.yaml  recipe.yaml  workstation.mjcf  workstation.urdf
assets/workstations/ar5_l6_bench_right/: manifest.yaml  recipe.yaml  workstation.mjcf  workstation.urdf
assets/workstations/ar5_o6_bench_bimanual/: manifest.yaml  recipe.yaml  workstation.mjcf  workstation.urdf
assets/workstations/lkls73_i1_bimanual/: manifest.yaml  workstation.mjcf  workstation.urdf
assets/workstations/lkls73_i1_l25_bimanual/: manifest.yaml  workstation.mjcf  workstation.urdf
assets/workstations/lkls73_i1_o6_bimanual/: manifest.yaml  workstation.mjcf  workstation.urdf
docs/: PR1_PROGRESS.md  PR2_PROGRESS.md  PR3_PROGRESS.md  REFACTOR_PLAN.md  TEST_PIPELINE.md  USAGE.md  USAGE.zh.md  architecture.md  component_mjcf_authoring.md  installation.md  isaac_lab_migration_memory.md  known_limitations.md  target_spec.md  urdf_assets_infra.md
scripts/: add_hand_to_npz.py  anchor_search.py  benchmark_replay.py  benchmark_tracking.py  convert_data_json.py  dump_arm_telemetry.py  replay.py  replay_ik.py  run.py  umi_bag_to_ee_poses.py
sim/: registry.py
sim/assets/: __init__.py  robots.py  scene_assets.py
sim/backends/: base.py
sim/backends/isaac/: backend.py  loaders.py  robot.py
sim/backends/mujoco/: __init__.py  backend.py  robot.py
sim/configs/: config.yaml  replay.yaml
sim/configs/backend/: mujoco.yaml
sim/configs/controller/: ik_pose_bimanual.yaml  joint_pd.yaml  joint_pd_bimanual.yaml  osc.yaml  osc_bimanual.yaml
sim/configs/recorder/: disabled.yaml  jsonl.yaml  lerobot.yaml
sim/configs/robot/: a7_lite_dc.yaml  a7_lite_l25_dc.yaml  ar5_08_l25_bench_bimanual.yaml  ar5_l25_bench_bimanual.yaml  ar5_l6_bench.yaml  ar5_l6_bench_bimanual.yaml  ar5_l6_bench_right.yaml  ar5_o6_bench_bimanual.yaml  lkls73_i1_bimanual.yaml  lkls73_i1_l25_bimanual.yaml  lkls73_i1_o6_bimanual.yaml
sim/configs/source/: data_collection.yaml  data_json.yaml
sim/configs/task/: bimanual_reach.yaml  bimanual_reach_ikpose.yaml  pick_place.yaml  reach.yaml
sim/controllers/: __init__.py  base.py  ik.py  joint_pd.py  osc.py
sim/envs/: base.py
sim/envs/test/: __init__.py  gain_tuner_scene.py  joint_gains.json  minimal_rl_env.py  scene_cfg.py  spawn_scene.py
sim/io/: __init__.py  gain_watcher.py  recorder.py  replayer.py
sim/io/replay/: __init__.py  (+2 more)
sim/runtime/: __init__.py  replay.py
sim/tasks/: __init__.py  base.py  bimanual_reach.py  pick_place.py  reach.py
tests/: test_base_env.py  test_bimanual_manifest.py  test_bimanual_reach_task.py  test_hand_decoder.py  test_mujoco_runtime.py  test_protocols.py  test_reach_task.py  test_recorder_roundtrip.py  test_replay_a7_lite.py  test_replay_hand_decoders.py  test_viser_replay.py
tools/: migrate_ar5_l6.py  registry_show.py  validate_component_mjcf.py  validate_workstation.py
tools/ci/: check_drift.sh
tools/composer/: compose.py  mjcf_ops.py  schemas.py  urdf_ops.py
(+119 files in other folders)
