# uv workspace root for `linker-sim`. Two members live under `packages/`:
# `linker-sim` (sim runtime + tools) and `linker-robot-assets` (asset
# bundles, currently a Phase 2 placeholder). This root carries no
# `[project]` table — it's a "virtual" workspace, only the members
# install. Per-package metadata lives in each member's pyproject.toml.

[tool.uv.workspace]
members = ["packages/*"]

# NVIDIA's pypi hosts the isaacsim wheels. uv resolves isaacsim from this
# index when [isaac] is active on the linker-sim package; other packages
# continue to resolve from the default index.
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
isaacsim = { index = "nvidia" }

# pytest needs to import linker_sim and linker_robot_assets without a
# wheel install (CI may run straight from a fresh clone). Adding both
# package src/ dirs to pythonpath makes `from linker_sim.X import Y` and
# `from linker_robot_assets.X import Y` work for tests/.
[tool.pytest.ini_options]
pythonpath = [
    "packages/linker-sim/src",
    "packages/linker-robot-assets/src",
]

# ----------------------------- ruff -------------------------------------- #

[tool.ruff]
line-length = 120
target-version = "py311"  # minimum supported

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # line length handled by formatter
]
